fix: toolbar touch (on mobile devices, segment not selectable)

--- a/studio/src/app/popovers/editor/app-create-slide/app-create-slide.scss
+++ b/studio/src/app/popovers/editor/app-create-slide/app-create-slide.scss
@@ -1,6 +1,6 @@
 app-create-slide {
   ion-toolbar {
-    padding: 16px 16px 0;
+    padding: 16px;
   }
 
   div.container {
